--- a/gb/ncid283_2.md
+++ b/gb/ncid283_2.md
@@ -28,6 +28,6 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693864.md#1" target="_blank">港媒：贸易战或威胁大陆粮食供应</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693864.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1142701434-150x120.jpg" align ="left"></a>贸易战持续超过一年，除了给大陆经济造成巨大冲击之外，有香港媒体日前表示，贸易战继续下去将会对大陆的粮食供应造成伤害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 2:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11694218.md#1" target="_blank">给习近平时间平息政局？传美中协议遇阻</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11694218.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1DP3PX-150x120.jpg" align ="left"></a>美中贸易谈判是否能达成协议备受关注。Axios新闻网站12月1日引述接近美国贸易谈判团队人士提供的消息报导，美中贸易协议目前遇到阻力，习近平需要时间去平息国内政治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 1:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693451.md#1" target="_blank">中国居民负债攀升 苏宁消费指数增幅跌破1%</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693451.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/08/1108101758212074-150x120.jpg" align ="left"></a>中国居民收入水平持续下降、居民负债持续攀升，导致消费水平下降。苏宁报告2019年居民消费升级增幅六年来首次低于1%，消费水平下滑进一步反映出中国经济的衰势。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 2:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11700492.md#1" target="_blank">川普北约谈5G 再强调华为存在安全隐患</a><br></h3>在周三（12月4日）的北约峰会上，北约各国达成一致，要是用安全可靠的5G设备。美国总统川普（特朗普）更是直接指出，跟中共军方有关联的华为公司存在安全隐患。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:59 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693329.md#1" target="_blank">专家：香港市场是中国与外界联系的唯一选择</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693329.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1143673702-150x120.jpg" align ="left"></a>亚洲证券与金融市场协会（ASIFMA）首席执行官马克·奥斯丁（Mark Austen）周五（11月29日）接受CNBC采访表示，中国最近向外国投资者扩大开放其金融业领域，取消对外国股权的限制和外国证券投资的配额。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 1:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/ncid283_2.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/ncid283_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid283_2.htm">http://www.epochtimes.com/gb/ncid283_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
