--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11688639.md#1" target="_blank">郑存柱：美国参众两院提出“反红通”法案</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11688639.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/c40fd72f3b3ff136e049be83f1129156-150x120.png" align ="left"></a>2019年9月13日，美国众议员黑斯廷斯（Alcee L. Hastings，FL-20）和威尔逊（Joe Wilson，SC-02）在众议院提出了《跨国镇压问责与预防法》（HR.4330，简称TRAP）。9月17日，参议员罗格?威克（Roger Wicker，MS）和本?卡丹（Ben Cardin，MD）也在参议院提.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:04 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11688202.md#1" target="_blank">【名家专栏】川普受非裔人欢迎 民主党犯难</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11688202.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Kanye-Trump-1055562960-1200x812-150x120.jpg" align ="left"></a>尽管很多媒体仍然沉迷于炒作众议院推动的已经日益显出毫无意义的弹劾调查，以及参议院的更被质疑的罢免总统新闻时，真正重要的政治新闻却被悄悄地隐藏了起来。两项最新的民意调查结果显示，美国总统川普（特朗普）现在在非裔美国人中越来越受欢迎，而且这个比例非常可观，甚至可以说是“巨大的”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 7:25 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11688034.md#1" target="_blank">司马泰：谁想搞垮香港？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11688034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/130620082701100311-150x120.jpg" align ="left"></a>1984年邓小平提出香港回归后“一国两制”50年不变。那50年之后怎么办呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 5:24 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687947.md#1" target="_blank">周晓辉：向心夫妇背负的秘密与未来出路</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687947.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/20191127PHO0018l-600x400-3-150x120.jpg" align ="left"></a>最近海外媒体关注的一个重要话题是投诚澳洲政府的中共前特工王立强（或王强）所披露的重磅情报。尽管中共一如既往，以拙劣的手法污蔑王立强是逃犯，并否认其曝光的内幕，但假的真不了，真的假不了，其所披露的内情对中共军方情报系统和中共当局的打击不可小觑。
+
+迄今为止，最为直接且直击核心的打击就是其曝光了上司、香港中国创新投资公.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 4:20 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686699.md#1" target="_blank">王友群：“干涉中国内政”是中共的洗脑谎言</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686699.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/01-trump-june27-Samira-Bouaou.jpg-150x120.jpg" align ="left"></a>每当国际社会对中共残酷镇压中国民众进行谴责和制裁时，中共总以“不许干涉中国内政”为借口进行抵赖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 2:01 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685473.md#1" target="_blank">夏小强：投诚澳洲特工王立强身份真假辩</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685473.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1bb7b1fc92f949c620fb1c740b178c11-600x400-1-1-150x120.jpg" align ="left"></a>王立强事件在台湾继续发酵，进一步印证了王立强所说细节的准确。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 8:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686822.md#1" target="_blank">程晓容：王立强案重挫中共 四大重点解读</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686822.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/505fa504a8ce10df481ea24386519d34-150x120.jpg" align ="left"></a>王立强的指证将中共的海外渗透网撕开了一个大洞，中共职业和外围特工在亚太区域的活动将受到更有针对性的调查和打击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 5:40 PM			</td></tr>
@@ -16,9 +22,6 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682689.md#1" target="_blank">程晓容：“止暴制乱”—中共的洗脑谎言</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/191027221639100615-150x120.jpg" align ="left"></a>中共在香港集中上演了种种暴力，因为暴力是中共的一大遗传基因，中共的执政史就是一部杀人史。所以，它宣扬的“止暴”，是倒打一耙的流氓笑话。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:56 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684044.md#1" target="_blank">乾元：告海外华人书</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684044.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/190612083448100311-600x400-1-150x120.jpg" align ="left"></a>近日来，中共在香港逐渐脱下伪善的外衣，数万名伪装成港警的内地军警进入香港，采用各种高科技的暴力手段镇压学生，甚至制造多起“被自杀”、性侵、酷刑案例。种种暴行，在国际网络上传出，场面令人惊愕，行径令人发指，观之者无不动容，甚至有德国战地记者Enno Lenze亦说，“港警比ISIS更可怕”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:50 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683960.md#1" target="_blank">谭笑飞：民意不可欺——有感于香港区议会选举</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683960.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo5105193351925311607_2-600x400-1-150x120.jpg" align ="left"></a>香港区议会选举落幕。此前，笔者没有想到选举能够如期举行，更没有想到泛民主派取得如此规模的胜利。当然，笔者相信泛民主派将在选举中取得重大进展，而其产生的连锁反应是中共无法承受的。所以笔者一直倾向于认为中共会制造各种事端，以此为借口取消或者推迟此次选举，或者在选举中赤裸裸地大规模舞弊。但是选举如期举行有惊无险，而泛民主派的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 2:11 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683874.md#1" target="_blank">廖祖笙：外出求职被跟踪被套路被劝返</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683874.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/08/708070919341497-150x120.jpg" align ="left"></a>因为生存的需要、尊严的需要、安全的需要、团体的需要等等无一得到合理的满足，我于近期又一次走向远方，在某沿海城市奔波了一天又一天，这之间，我不时被跟踪、被套路、被劝返。这种人权状况确实“比美国好五倍”的实证，足见苟活在“法治国家”何其“幸福”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 1:38 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683733.md#1" target="_blank">王友群：曾庆红是香港“暴乱”的幕后黑手</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/zengqinghong-150x120.jpg" align ="left"></a>如果习近平不抓捕曾庆红及其死党，香港仍不得安宁；曾乱港的一切罪过，也将会由习承担。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 11:57 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682369.md#1" target="_blank">【名家专栏】你超重吗？食品巨头希望如此</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682369.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-52751242-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" alt="TIANJIN, CHINA - MAY 2: (CHINA OUT) Overweight patients take part in a physical exercise lesson at the Aimin Acupuncture Weight Loss Hospital on May 2, 2005 in Tianjin, China. The hospital specialises in weight loss by means of acupuncture, traditional Chinese medicine, regular exercise and a strictly controlled diet. More than 20 percent of Chinese adults are overweight, according to the International Obesity Task Force. (Photo by China Photos/Getty Images)" align ="left"></a>在美国与世界各地，人们从未如此肥胖。今天，美国男性的平均体重高达194磅（88公斤），女性的平均体重为165磅（74.84公斤）。人们身材的改变，也造就了特殊尺寸的救护车、手术台、棺材，以及飞机和火车上更宽大的座椅。然而，超重不完全是人们的错，而是食品业者们的计划。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 6:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687981.md#1" target="_blank">伍新：此线抽头天拆谍网——王立强叛逃感言</a><br></h3>一谍叛逃澳洲亮，北极风响党脊梁。
 连夜臭骂诈骗犯，忠诚洗脑药换汤。
 罔顾王立强虚实，伪造判决书穿帮。
@@ -66,9 +69,5 @@
 干儿丑戏跌下场，傀儡禁蒙违宪章;
 鲜血浇灌花更芳，荣光必定归香港;
 土共且收臭皮囊，耻叫世人戳脊梁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:21 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683930.md#1" target="_blank">林泉：港民区选告捷莫轻敌</a><br></h3>港民区选倒乾坤，铁掌横击党一尊。
-战友相拥抛喜泪，亲朋共庆启香槟。
-争求民主尸盈海，博取自由血满身。
-切莫轻松看死鬼，黎明前夜化毒喷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 1:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/news392_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_5.htm">http://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
